# aignt-os

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Dockerfile  ERROR_LOG.md  PENDING_LOG.md  README.md  RUN_REPORT.md  SPEC.md  compose.copilot.yaml  compose.dev.yaml  compose.yaml  main.py  memory.md  pyproject.toml
.claude/: settings.json
.claude/agents/: explorer.md  monitor.md  reviewer.md  worker.md
.claude/skills/: adr-manager  branch-sync-guard  ci-automation  debug-failure  git-flow-manager  green-refactor  memory-curator  quality-gate  repo-preflight  report-writer  session-logger  session-primer  spec-editor  spec-validator  task-planner  technical-triage  test-red
.codex/: config.toml
.codex/agents/: explorer.toml  monitor.toml  reviewer.toml  worker.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/copilot/: setup-steps.yml
.github/instructions/: ci.instructions.md  python.instructions.md  spec.instructions.md
.github/workflows/: container-build.yml  operational-ci.yml
docs/: IDEAS.md
docs/adr/: 001-cli-orchestration.md  003-state-machine-pipeline-engine.md  007-local-llms-offline-reasoning.md  008-spec-driven-development.md  009-runtime-dual-cli-worker.md  010-adopt-aignt-synapse-flow-name.md  011-lightweight-docker-preflight-default.md  012-mandatory-integration-tests.md  (+1 more)
features/: init_feature_worktrees.sh
scripts/: branch-sync-check.sh  branch-sync-update.sh  commit-check.sh  dev-codex.sh  dev-copilot.sh  docker-build.sh  docker-preflight.sh  docker-rebuild.sh  docker-up.sh  render-codex-config.sh  security-gate.sh  validate-branch.sh
tests/: __init__.py
(+339 files in other folders)
